# lazysom

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  Cargo.toml  README.md  README_bytecode.md  patch.diff  patch_som  patch_som.rs  patch_system  patch_system.rs  patch_tests  patch_tests.rs  patch_tests2  patch_tests2.rs  patch_tests3  patch_tests3.rs  scratch.rs  test_browser_persistence.som
.github/workflows/: ci.yml
Async/: AsyncExample.som  AsyncFile.som  AsyncIO.som  AsyncIOTest.som  AsyncTcpSocket.som  EditorDemo.som  PingClientDemo.som
Tools/: Browser.som  Debugger.som  DebuggerExt.som  EguiContext.som  EguiPainter.som  EguiUi.som  File.som  LazyIde.som  ObjectExt.som  Workspace.som
src/: ast.rs  bytecode.rs  bytecode_interpreter.rs  compiler.rs  gui.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  primitives.rs  serialize.rs  universe.rs
tests/: Hello.som  RecursionTest.som  TestEndsWith.som  TestMetaclasses.som  TestMethods.som  gc_stress.rs  integration_test.rs  som_tests.rs
