[package]
name = "lazysom"
version = "0.1.0"
edition = "2024"

[lib]
name = "lazysom"
path = "src/lib.rs"

[[bin]]
name = "lazysom"
path = "src/main.rs"

[dependencies]
logos = "0.14"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
derivative = "2.2"
regex = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1.46"
