[package]
name = "lazysom"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.14"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
derivative = "2.2"
regex = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1.46"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
gc = { version = "0.5", features = ["derive"] }
eframe = "0.34.1"
tokio = { version = "1.52.1", features = ["full"] }
lazy_static = "1.5.0"
